--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600;700&display=swap');
+
+h1 {
+	@apply font-poppins font-bold text-[46px] leading-[130%] tracking-[-0.5%]
+}
+
+h2 {
+  @apply font-poppins font-medium text-[25px] leading-[130%] tracking-[-0.5%]
+}
+
+p {
+  @apply font-open-sans font-normal text-[16px] leading-[150%] tracking-[-1.1%]
+}
+
+/* Nav bar text style in Figma */
+nav > a {
+  @apply font-poppins font-semibold text-[14px] leading-[150%] tracking-[-1.1%]
+}
+
+button {
+  @apply font-open-sans font-bold text-[15px] leading-[150%] tracking-[-1.1%]
+}
+
+input,
+textarea {
+  @apply font-open-sans font-semibold text-[15px] leading-[150%] tracking-[-1.1%]
+}
+
+label,
+input::placeholder,
+textarea::placeholder {
+  @apply font-open-sans font-normal text-[15px] leading-[150%] tracking-[-1.1%]
+}
