feat: add strong styles and fix import warnings

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600;700&display=swap');
 
@@ -21,7 +21,8 @@ nav > a {
   @apply font-poppins text-[14px] font-semibold leading-[150%] tracking-[-1.1%];
 }
 
-button {
+button,
+strong {
   @apply font-open-sans text-[15px] font-bold leading-[150%] tracking-[-1.1%];
 }
 
