--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600;700&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   @apply font-poppins text-[2.875rem] font-bold leading-[130%] tracking-[-0.5%];
 }
