--- a/src/app.css
+++ b/src/app.css
@@ -25,8 +25,8 @@ p {
 }
 
 /* Nav bar text style in Figma */
-nav > a {
-  @apply font-poppins text-[1.5625rem] font-semibold leading-[150%] tracking-[-1.1%];
+nav a {
+  @apply font-poppins text-[1.125rem] font-semibold leading-[150%] tracking-[-1.1%];
 }
 
 button,
