--- a/src/app.css
+++ b/src/app.css
@@ -49,3 +49,12 @@ input::-ms-reveal,
 input::-ms-clear {
   display: none;
 }
+
+@keyframes scrolling {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
